@@ -1,6 +1,9 @@
 2006-02-22  Tim Waugh  <twaugh@redhat.com>
 
 	* cupsconnection.c: More consistent error handling.
+	(do_printer_request): Fixed ipp_t leak.
+	(Connection_addPrinter): Likewise.
+	(Connection_setPrinterDevice): Likewise.
 
 	* cupsconnection.c (Connection_putFile): Fixed ipp_t leak.
 	(set_ipp_error): "i" -> "(is)" for IPPError.
